[gd_scene load_steps=12 format=3 uid="uid://b86arcdhu0d2b"]

[ext_resource type="Script" path="res://scripts/shop.gd" id="1_bnh1b"]
[ext_resource type="Script" path="res://scripts/menubuttondefault.gd" id="2_ckr77"]
[ext_resource type="Texture2D" uid="uid://dfxflj5hy8geo" path="res://assets/test/interface/shop_paid_currency.PNG" id="2_fafje"]
[ext_resource type="Texture2D" uid="uid://c10cghxj3uynl" path="res://assets/test/buttons/plus.png" id="2_k6v10"]
[ext_resource type="Texture2D" uid="uid://cismabfqehtlc" path="res://assets/test/interface/shop_energy.PNG" id="4_anfg8"]
[ext_resource type="Texture2D" uid="uid://pse8fckqgg6p" path="res://assets/test/buttons/paid_money_one.PNG" id="5_4t2t7"]
[ext_resource type="Texture2D" uid="uid://c7p5crum1mb80" path="res://assets/test/interface/shop_cat_skins.PNG" id="5_nyyo0"]
[ext_resource type="Texture2D" uid="uid://bvoy00qe4uvdf" path="res://assets/test/interface/shop_gatcha.PNG" id="6_wtkra"]
[ext_resource type="Texture2D" uid="uid://c83ga6lrlnkj5" path="res://assets/test/interface/shop_logo.PNG" id="8_h4dph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jg6c"]
bg_color = Color(0.682353, 0.443137, 0.529412, 1)
border_width_left = 3
border_width_top = 6
border_width_right = 7
border_width_bottom = 3
border_color = Color(0.466667, 0.317647, 0.317647, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0adhq"]
bg_color = Color(0.678431, 0.52549, 0.52549, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.466667, 0.317647, 0.317647, 1)
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[node name="shop" type="Control" node_paths=PackedStringArray("specialOffer", "freeOffer")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bnh1b")
specialOffer = NodePath("specialOffer")
freeOffer = NodePath("freeOffer")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.596078, 0.447059, 0.447059, 1)

[node name="paidCurrency" type="ColorRect" parent="." groups=["shop_elements"]]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -117.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.678431, 0.52549, 0.52549, 1)

[node name="TextureRect" type="TextureRect" parent="paidCurrency"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -60.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fafje")
expand_mode = 1
stretch_mode = 5

[node name="paidCurrencyButton" type="Button" parent="paidCurrency" groups=["shop_button"]]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -68.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
text = "paid"
script = ExtResource("2_ckr77")

[node name="price_1" type="Panel" parent="paidCurrency"]
layout_mode = 0
offset_left = 38.0
offset_top = 96.0
offset_right = 116.0
offset_bottom = 136.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="paidCurrency/price_1"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "9.99"

[node name="PLN" type="Label" parent="paidCurrency/price_1"]
layout_mode = 0
offset_left = 46.0
offset_top = 16.0
offset_right = 86.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="price_2" type="Panel" parent="paidCurrency"]
layout_mode = 0
offset_left = 169.0
offset_top = 96.0
offset_right = 265.0
offset_bottom = 136.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="paidCurrency/price_2"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "24.99"

[node name="PLN" type="Label" parent="paidCurrency/price_2"]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="price_3" type="Panel" parent="paidCurrency"]
layout_mode = 0
offset_left = 287.0
offset_top = 95.0
offset_right = 389.0
offset_bottom = 135.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="paidCurrency/price_3"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "49.99"

[node name="PLN" type="Label" parent="paidCurrency/price_3"]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="price_4" type="Panel" parent="paidCurrency"]
layout_mode = 0
offset_left = 408.0
offset_top = 96.0
offset_right = 518.0
offset_bottom = 136.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="paidCurrency/price_4"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "119.99"

[node name="PLN" type="Label" parent="paidCurrency/price_4"]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="energy" type="ColorRect" parent="." groups=["shop_elements"]]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 23.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.678431, 0.52549, 0.52549, 1)

[node name="TextureRect" type="TextureRect" parent="energy"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_anfg8")
expand_mode = 1
stretch_mode = 5

[node name="energyButton" type="Button" parent="energy" groups=["shop_button"]]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "energy"
script = ExtResource("2_ckr77")

[node name="price_1" type="Panel" parent="energy"]
layout_mode = 0
offset_left = 34.0
offset_top = 100.0
offset_right = 112.0
offset_bottom = 140.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="energy/price_1" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "9.99"

[node name="Label2" type="Label" parent="energy/price_1" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "5"

[node name="PLN" type="Label" parent="energy/price_1" groups=["pln"]]
layout_mode = 0
offset_left = 46.0
offset_top = 16.0
offset_right = 86.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="energy/price_1" groups=["paid"]]
layout_mode = 0
offset_left = 42.0
offset_top = -9.0
offset_right = 92.0
offset_bottom = 34.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="price_2" type="Panel" parent="energy"]
layout_mode = 0
offset_left = 169.0
offset_top = 104.0
offset_right = 265.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="energy/price_2" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "24.99"

[node name="PLN" type="Label" parent="energy/price_2" groups=["pln"]]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="energy/price_2" groups=["paid"]]
layout_mode = 0
offset_left = 57.0
offset_top = -10.0
offset_right = 107.0
offset_bottom = 33.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="energy/price_2" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "25"

[node name="price_3" type="Panel" parent="energy"]
layout_mode = 0
offset_left = 287.0
offset_top = 103.0
offset_right = 389.0
offset_bottom = 143.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="energy/price_3" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "49.99"

[node name="PLN" type="Label" parent="energy/price_3" groups=["pln"]]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="energy/price_3" groups=["paid"]]
layout_mode = 0
offset_left = 61.0
offset_top = -7.0
offset_right = 111.0
offset_bottom = 36.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="energy/price_3" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "60"

[node name="price_4" type="Panel" parent="energy"]
layout_mode = 0
offset_left = 408.0
offset_top = 104.0
offset_right = 518.0
offset_bottom = 144.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="energy/price_4" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "119.99"

[node name="PLN" type="Label" parent="energy/price_4" groups=["pln"]]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="energy/price_4" groups=["paid"]]
layout_mode = 0
offset_left = 69.0
offset_top = -6.0
offset_right = 119.0
offset_bottom = 37.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="energy/price_4" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "100"

[node name="skinCollection" type="ColorRect" parent="." groups=["shop_elements"]]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 181.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.678431, 0.52549, 0.52549, 1)

[node name="TextureRect" type="TextureRect" parent="skinCollection"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -72.5
offset_bottom = 72.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_nyyo0")
expand_mode = 1
stretch_mode = 5

[node name="skinCollectionButton" type="Button" parent="skinCollection" groups=["shop_button"]]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "skins"
script = ExtResource("2_ckr77")

[node name="price_2" type="Panel" parent="skinCollection"]
layout_mode = 0
offset_left = 221.0
offset_top = 115.0
offset_right = 317.0
offset_bottom = 155.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="skinCollection/price_2" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "24.99"

[node name="PLN" type="Label" parent="skinCollection/price_2" groups=["pln"]]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="skinCollection/price_2" groups=["paid"]]
layout_mode = 0
offset_left = 57.0
offset_top = -10.0
offset_right = 107.0
offset_bottom = 33.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="skinCollection/price_2" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "40"

[node name="price_3" type="Panel" parent="skinCollection"]
layout_mode = 0
offset_left = 420.0
offset_top = 114.0
offset_right = 522.0
offset_bottom = 154.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="skinCollection/price_3" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "49.99"

[node name="PLN" type="Label" parent="skinCollection/price_3" groups=["pln"]]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="skinCollection/price_3" groups=["paid"]]
layout_mode = 0
offset_left = 61.0
offset_top = -7.0
offset_right = 111.0
offset_bottom = 36.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="skinCollection/price_3" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "50"

[node name="gatcha" type="ColorRect" parent="." groups=["shop_elements"]]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -1.0
offset_top = 189.0
offset_right = -1.0
offset_bottom = 318.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.678431, 0.52549, 0.52549, 1)

[node name="TextureRect" type="TextureRect" parent="gatcha"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -63.5
offset_bottom = 63.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_wtkra")
expand_mode = 1
stretch_mode = 5

[node name="skinCollectionButton" type="Button" parent="gatcha" groups=["shop_button"]]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -48.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
text = "skins"
script = ExtResource("2_ckr77")

[node name="price_2" type="Panel" parent="gatcha"]
layout_mode = 0
offset_left = 122.0
offset_top = 103.0
offset_right = 218.0
offset_bottom = 143.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="gatcha/price_2" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "24.99"

[node name="PLN" type="Label" parent="gatcha/price_2" groups=["pln"]]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="gatcha/price_2" groups=["paid"]]
layout_mode = 0
offset_left = 57.0
offset_top = -10.0
offset_right = 107.0
offset_bottom = 33.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="gatcha/price_2" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "25"

[node name="price_3" type="Panel" parent="gatcha"]
layout_mode = 0
offset_left = 240.0
offset_top = 102.0
offset_right = 342.0
offset_bottom = 142.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="gatcha/price_3" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "49.99"

[node name="PLN" type="Label" parent="gatcha/price_3" groups=["pln"]]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="gatcha/price_3" groups=["paid"]]
layout_mode = 0
offset_left = 61.0
offset_top = -7.0
offset_right = 111.0
offset_bottom = 36.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="gatcha/price_3" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "60"

[node name="price_4" type="Panel" parent="gatcha"]
layout_mode = 0
offset_left = 361.0
offset_top = 103.0
offset_right = 471.0
offset_bottom = 143.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="gatcha/price_4" groups=["pln_price"]]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "119.99"

[node name="PLN" type="Label" parent="gatcha/price_4" groups=["pln"]]
layout_mode = 0
offset_left = 72.0
offset_top = 16.0
offset_right = 112.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="TextureRect2" type="TextureRect" parent="gatcha/price_4" groups=["paid"]]
layout_mode = 0
offset_left = 69.0
offset_top = -6.0
offset_right = 119.0
offset_bottom = 37.0
texture = ExtResource("5_4t2t7")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="gatcha/price_4" groups=["coin_price"]]
layout_mode = 0
offset_left = 22.0
offset_top = 7.0
offset_right = 62.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "125"

[node name="AddElementButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -158.0
offset_right = 129.0
offset_bottom = -38.0
grow_vertical = 0
texture_normal = ExtResource("2_k6v10")
ignore_texture_size = true
stretch_mode = 0

[node name="CloseShop" type="TextureButton" parent="."]
modulate = Color(1, 0.189276, 0.947632, 1)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -38.0
offset_top = -150.0
offset_right = 33.0
offset_bottom = -81.0
grow_horizontal = 0
grow_vertical = 0
rotation = 0.864777
texture_normal = ExtResource("2_k6v10")
ignore_texture_size = true
stretch_mode = 0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -228.0
offset_top = 27.0
offset_right = 230.0
offset_bottom = 137.0
grow_horizontal = 2
texture = ExtResource("8_h4dph")
expand_mode = 1
stretch_mode = 4

[node name="specialOffer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -302.0
offset_right = 259.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0adhq")

[node name="price_2" type="Panel" parent="specialOffer"]
offset_left = 176.0
offset_top = 115.0
offset_right = 278.0
offset_bottom = 155.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="specialOffer/price_2"]
layout_mode = 0
offset_left = 5.0
offset_top = 7.0
offset_right = 45.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "49.99"

[node name="PLN" type="Label" parent="specialOffer/price_2"]
layout_mode = 0
offset_left = 60.0
offset_top = 16.0
offset_right = 100.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 12
text = "PLN"

[node name="Sprite2D" type="Sprite2D" parent="specialOffer"]
position = Vector2(82, 71)
scale = Vector2(0.317359, 0.317359)
texture = ExtResource("2_fafje")
region_enabled = true
region_rect = Rect2(255.925, 0, 381.559, 373)

[node name="Sprite2D2" type="Sprite2D" parent="specialOffer"]
position = Vector2(151, 83)
scale = Vector2(0.317359, 0.317359)
texture = ExtResource("4_anfg8")
region_enabled = true
region_rect = Rect2(216.484, 0, 306.533, 416.711)

[node name="Sprite2D3" type="Sprite2D" parent="specialOffer"]
position = Vector2(214, 69)
scale = Vector2(0.317359, 0.317359)
texture = ExtResource("4_anfg8")
region_enabled = true
region_rect = Rect2(216.484, 0, 306.533, 416.711)

[node name="freeOffer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -265.0
offset_top = -302.0
offset_right = -77.0
offset_bottom = -140.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0adhq")

[node name="price_2" type="Panel" parent="freeOffer"]
offset_left = 98.0
offset_top = 115.0
offset_right = 176.0
offset_bottom = 155.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0jg6c")

[node name="Label" type="Label" parent="freeOffer/price_2"]
layout_mode = 0
offset_left = 13.0
offset_top = 7.0
offset_right = 59.0
offset_bottom = 35.0
theme_override_font_sizes/font_size = 20
text = "FREE"

[node name="Sprite2D" type="Sprite2D" parent="freeOffer"]
position = Vector2(63, 77)
scale = Vector2(0.317359, 0.317359)
texture = ExtResource("4_anfg8")
region_enabled = true
region_rect = Rect2(-26.3, 22.4, 221.348, 385.736)

[node name="Sprite2D2" type="Sprite2D" parent="freeOffer"]
position = Vector2(124, 60)
scale = Vector2(0.317359, 0.317359)
texture = ExtResource("2_fafje")
region_enabled = true
region_rect = Rect2(-26.3, 22.4, 287.835, 385.736)

[connection signal="pressed" from="paidCurrency/paidCurrencyButton" to="paidCurrency/paidCurrencyButton" method="_on_pressed"]
[connection signal="pressed" from="energy/energyButton" to="energy/energyButton" method="_on_pressed"]
[connection signal="pressed" from="skinCollection/skinCollectionButton" to="skinCollection/skinCollectionButton" method="_on_pressed"]
[connection signal="pressed" from="gatcha/skinCollectionButton" to="gatcha/skinCollectionButton" method="_on_pressed"]
[connection signal="pressed" from="AddElementButton" to="." method="_on_add_element_button_pressed"]
[connection signal="pressed" from="CloseShop" to="." method="_on_close_shop_pressed"]
